Creati collegamenti alla Sidebar.

--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -59,20 +59,20 @@
                 </div>
                 <h5 class="text-center">Menu</h5>
                 <a href="Home.aspx"><i class="bi bi-house-door-fill me-2"></i>Dashboard</a>
-                <a href="#"><i class="bi bi-person-check-fill me-2"></i>Gestione studente</a>
+                <a href="AbilitaStudente.aspx"><i class="bi bi-person-check-fill me-2"></i>Gestione studente</a>
                 <a href="Gestione_Facolta.aspx"><i class="bi bi-mortarboard-fill me-2"></i>Gestione facoltà</a>
-                <a href="#"><i class="bi bi-clipboard2 me-2"></i>Gestione corsi</a>
+                <a href="Gestione_Corsi.aspx"><i class="bi bi-clipboard2 me-2"></i>Gestione corsi</a>
                 <a href="Gestione_PianoStudi.aspx"><i class="bi bi-book me-2"></i>Gestione Piano Studi</a>
-                <a href="#"><i class="bi bi-people-fill me-2"></i>Gestione Docenti</a>
+                <a href="GestioneDocenti.aspx"><i class="bi bi-people-fill me-2"></i>Gestione Docenti</a>
 
                 <div class="dropdown-sidebar">
                     <a class="dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenuEconomica" role="button" aria-expanded="false" aria-controls="submenuEconomica">
                         <i class="bi bi-wallet2 me-2"></i>Gestione Economica
                     </a>
                     <div class="collapse" id="submenuEconomica">
-                        <a class="submenu-item" href="#"><i class="bi bi-cash-stack me-2"></i>Incasso Annuale</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i>Incasso per corso</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-piggy-bank me-2"></i>Stima incassi dell'anno</a>
+                        <a class="submenu-item" href="IncassoAnnuale.aspx"><i class="bi bi-cash-stack me-2"></i>Incasso Annuale</a>
+                        <a class="submenu-item" href="IncassoPerCorso.aspx"><i class="bi bi-receipt me-2"></i>Incasso per corso</a>
+                        <a class="submenu-item" href="StimaIncassiDellAnno.aspx"><i class="bi bi-piggy-bank me-2"></i>Stima incassi dell'anno</a>
                     </div>
                 </div>
 
@@ -81,12 +81,12 @@
                         <i class="bi bi-bar-chart-line-fill me-2"></i>Statistiche studenti
                     </a>
                     <div class="collapse" id="submenuStatistiche">
-                        <a class="submenu-item" href="#"><i class="bi bi-people-fill me-2"></i>Studenti laureati per anno</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i>Studenti iscritti per anno</a>
+                        <a class="submenu-item" href="StudentiLaureatiPerAnno.aspx"><i class="bi bi-people-fill me-2"></i>Studenti laureati per anno</a>
+                        <a class="submenu-item" href="StudentiIscrittiPerAnno.aspx"><i class="bi bi-receipt me-2"></i>Studenti iscritti per anno</a>
                     </div>
                 </div>
 
-                <a href="#"><i class="bi bi-envelope me-2"></i>Comunicazioni</a>
+                <a href="Comunicazioni.aspx"><i class="bi bi-envelope me-2"></i>Comunicazioni</a>
             </nav>
 
             <!-- Main content -->
