modifiche home page

--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -64,16 +64,10 @@
                                     Offerta Formativa
                                 </a>
                                 <ul class="dropdown-menu">
-
-                                    <li class="dropdown">
-                                        <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Piano di studi
-                                        </a>
-                                        <ul class="dropdown-menu dropdown-submenu">
-                                            <li><a class="dropdown-item" href="#">Programma</a></li>
                                             <li><a class="dropdown-item" href="#">Esami e docenti</a></li>
-                                        </ul>
-                                    </li>
+                                            <li><a class="dropdown-item" href="#">Corsi di laurea</a></li>
+                                            <li><a class="dropdown-item" href="#">Piano di studi</a></li>
+                                            <li><a class="dropdown-item" href="#">Programma</a></li>
                                 </ul>
                             </li>
 
@@ -108,7 +102,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
