Creazione Restanti controller

--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Materiali" asp-action="Add">Materiali</a></li>
-                                    <li><a class="dropdown-item" href="#">Lezioni</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Lezioni" asp-action="Add">Lezioni</a></li>
                                 </ul>
                             </li>
 
@@ -65,9 +65,9 @@
                                     Esami
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Appelli</a></li>
-                                    <li><a class="dropdown-item" href="#">Test</a></li>
-                                    <li><a class="dropdown-item" href="#">Valutazioni</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Appelli" asp-action="Add">Appelli</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Tests" asp-action="Add">Test</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Valutazioni" asp-action="ValutazioneTest">Valutazioni</a></li>
                                 </ul>
                             </li>
 
