--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -91,6 +91,9 @@
 
             <!-- Main content -->
             <main class="main-content">
+                <div class="d-flex justify-content-end">
+                    <a href="Logout.aspx" class="btn btn-danger me-2"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                </div>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </main>
