--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 					<a class="btn btn-light btn-sm" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
 				</div>
 				<div class="d-flex gap-2 me-3">
-					<a href="#" class="btn btn-light btn-sm">Area Lavoro</a>
+					<a href="#" class="btn btn-light btn-sm">Carriera</a>
 
 				</div>
 			</div>
