--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -10,10 +10,10 @@
 	<div class="row gx-5">
 		<div class="col-9">
 			@{
-				var ruolo = Context.Session.GetString("ruolo");
+				var ruolo = Context.Session.GetString("Ruolo");
 			}
 
-			@if (ruolo == "Docente")
+			@if (ruolo == "D")
 			{
 				<form method="post" asp-action="AddStudente">
 					<div class="mt-3">
@@ -27,11 +27,11 @@
 			}
 
 			<form method="post" asp-action="Add">
-				@if (ruolo == "Docente" && ViewBag.SelectedKEsame != null)
+				@if (ruolo == "D" && ViewBag.SelectedKEsame != null)
 				{
 					<input type="hidden" asp-for="K_Esame" value="@ViewBag.SelectedKEsame" />
 				}
-				@if (ruolo == "Docente")
+				@if (ruolo == "D")
 				{
 					<div class="mt-3">
 						<label class="form-label">Destinatari:</label>
@@ -42,7 +42,7 @@
 						<span asp-validation-for="K_Studente" class="text-danger"></span>
 					</div>
 				}
-				@if (ruolo == "Operatore")
+				@if (ruolo == "O")
 				{
 					<div class="mt-3">
 						<label class="form-label">Studenti:</label>
@@ -60,7 +60,7 @@
 						<span asp-validation-for="K_Docente" class="text-danger"></span>
 					</div>
 				}
-				@if (ruolo == "Studente")
+				@if (ruolo == "S")
 				{
 					<div class="mt-3">
 						<label class="form-label">Destinatari:</label>
