--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -97,8 +97,8 @@
         </div>
     </header>
 
-    <div class="container-fluid">
-        <main role="main" class="pb-3 mt-5">
+    <div class="">
+        <main role="main" class="">
             @RenderBody()
         </main>
     </div>
