--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -115,11 +115,11 @@
     </div>
 
     <footer>
-        <div class="bg-dark text-white h-100">
+        <div class="bg-dark text-white position-sticky">
             <div class="container d-flex justify-content-between align-items-end flex-wrap">
                 <div>
                     <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                    <p class="fs-4 ms-4 mb-0">Università UNIGen</p>
+                    <p class="fs-4">Università UNIGen</p>
                     <p class="fs-6">Milano, Milano, MI 20100, IT</p>
                 </div>
                 <div>
