--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -47,13 +47,13 @@
 
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="~/Sources/Image20250424100652.gif" class="d-block w-100" alt="GIF 1">
+					<img src="~/Sources/SrudendessaInPiedi.gif" class="d-block w-100" alt="GIF 1">
 				</div>
 				<div class="carousel-item">
-					<img src="~/Sources/Image20250424100701.gif" class="d-block w-100 " alt="GIF 2">
+					<img src="~/Sources/StudendeConCappello.gif" class="d-block w-100 " alt="GIF 2">
 				</div>
 				<div class="carousel-item">
-					<img src="~/Sources/Image20250424103740.gif" class="d-block w-100" alt="GIF 3">
+					<img src="~/Sources/StudendtiGiosi.gif" class="d-block w-100" alt="GIF 3">
 				</div>
 			</div>
 
