--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -81,6 +81,29 @@
                                 </ul>
                             </li>
 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Offerta Formativa
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Esami e docenti</a></li>
+                                    <li><a class="dropdown-item" href="#">Corsi di laurea</a></li>
+                                    <li><a class="dropdown-item" href="#">Piano di studi</a></li>
+                                    <li><a class="dropdown-item" href="#">Programma</a></li>
+                                </ul>
+                            </li>
+
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Didattica
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Calendario Accademico</a></li>
+                                    <li><a class="dropdown-item" href="#">Sedute di laurea</a></li>
+                                </ul>
+
+
                         </ul>
                         <ul class="navbar-nav navbar-right">
                             <li class="nav-item">
