--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -80,7 +80,7 @@
 			</form>
 		</div>
 		<div class="col-3 shadow p-3 bg-body-tertiary rounded">
-			In questa pagina
+			Nella pagina corrente, il docente e l'amministrazione possono inserire una comunicazione.
 		</div>
 	</div>
 
