--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Lezioni</h5>
                     <p class="card-text">Qui sono contenuti tutti gli applicativi per gestire le lezioni.</p>
-                    <a href="#" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Lezioni" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Appelli</h5>
                     <p class="card-text">Qui è presente la gestione degli appelli.</p>
-                    <a href="#" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Appelli" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Test</h5>
                     <p class="card-text">Sezione dedicata alla gestione dei test.</p>
-                    <a href="#" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Tests" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Valutazioni</h5>
                     <p class="card-text">In questa area potrai valutare gli esami del corso dei cui sei docente.</p>
-                    <a href="#" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Valutazioni" asp-action="ValutazioneTest" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
