--- a/AreaDocente/Views/Lezioni/Add.cshtml
+++ b/AreaDocente/Views/Lezioni/Add.cshtml
@@ -1,4 +1,38 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-<h1>Testing</h1>
+﻿@model AreaDocente.Models.AddLezioniViewModel
+
+<h1>Inserimento nuova lezione</h1>
+
+<form method="post">
+
+	@* LEZIONE *@
+	<div class="mt-3">
+		<label id="lblLezione" class="form-label">Titolo</label>
+		<input type="text" class="form-control" asp-for="Titolo" />
+	</div>
+	<div class="mt-3">
+		<label id="lblVideo" class="form-label">Video</label>
+		<input type="text" class="form-control" asp-for="Video" />
+	</div>
+
+	@* BTN SALVA *@
+	<div class="mt-3">
+		<button type="submit" class="btn btn-primary">Salva</button>
+	</div>
+
+</form>
+
+@* JS *@
+@section Scripts {
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+	@if (TempData["ErrorMessage"] != null)
+	{
+		<script>
+			Swal.fire({
+				icon: 'error',
+				title: 'Operazione non riuscita',
+				text: '@TempData["ErrorMessage"]'
+			});
+		</script>
+	}
+}
