--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -57,7 +57,7 @@
 							<div class="modal-body">
 								<div class="mb-2 ">
 									<label class="form-label form-control-label">Inserisci la Vecchia Password:</label>
-									<input type="password" asp-for="Password" class="form-control form-control-alternative" />
+									<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
 								</div>
 								<div class="mb-2 ">
 									<label class="form-label form-control-label">Nuova Password:</label>
