--- a/AreaDocente/Views/Materiali/Add.cshtml
+++ b/AreaDocente/Views/Materiali/Add.cshtml
@@ -6,18 +6,22 @@
 
 <h1>Inserimento Materiale</h1>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
 
     <div class="mt-3">
         <label class="form-label">Titolo</label>
         <input type="text" class="form-control" asp-for="Titolo" />
         <label class="form-label" for="file">Titolo</label>
-		<input type="file" id="file" name="materiale" class="form-control" />
-        
+		<input type="file" id="file" name="materiale" class="form-control" asp-for="materiale"/>      
+    </div>
+    <div class="mt-3">
+        <label class="form-label">Esame di appartenenza</label>
+        <select asp-for="K_Esame" asp-items="@ViewBag.EsameList" class="form-select">
+            <option disabled selected>==Selezionare un esame</option>
+        </select>
     </div>
 
     
-
     <div class="mt-3">
         <button type="submit" class="btn btn-primary">Salva</button>
     </div>
