--- a/AreaDocente/Views/Materiali/Lista.cshtml
+++ b/AreaDocente/Views/Materiali/Lista.cshtml
@@ -24,7 +24,7 @@
                 <td>@mat.Titolo</td>
                 <td>@mat.Materiale</td>
                 <td>@mat.Tipo</td>
-                <td>@mat.K_Esame</td>
+                <td>@mat.esame.TitoloEsame</td>
             </tr>
 
         }
