--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -8,7 +8,7 @@
 
 	<h1>Comunicazioni</h1>
 	<div class="row gx-5">
-		<div class="col-9">
+		<div class="col-10 col-md-9">
 			<table class="table">
 				<thead>
 					<tr>
@@ -90,7 +90,36 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+		<div class="col-2 col-md-3">
+			<div class="shadow p-3 bg-body-tertiary rounded d-none d-md-block mt-4 position-fixed me-2">
+				<p>Nella pagina corrente, l'utente può leggere e rispondere alle sue comunicazioni.</p>
+			</div>
+
+			<div class="d-block d-md-none mt-4">
+				<!-- Button trigger modal -->
+				<button type="button" class="btn text-muted position-fixed" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+					Info
+				</button>
+
+				<!-- Modal -->
+				<div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h1 class="modal-title fs-5" id="staticBackdropLabel">infromazioni d'uso</h1>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<p>Nella pagina corrente, l'utente può leggere e rispondere alle sue comunicazioni.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </div>
