invia email DA SISTEMARE

--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -91,6 +91,11 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+		<div class="col-3">
+			<div class="shadow p-3 bg-body-tertiary rounded d-none d-md-block mt-4">
+				Nella pagina corrente, il docente e l'amministrazione possono inserire una comunicazione.
+			</div>
+			<button type="button" class="btn btn-primary d-block d-md-none" id="info">INFO</button>
+		</div>
 	</div>
 </div>
