--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
-@model Comunicazioni.Models.AddComunicazioneViewModel
+﻿@model Comunicazioni.Models.AddComunicazioneViewModel
 <div class="container">
 
 
@@ -17,7 +13,7 @@
 			{
 				<form method="post" asp-action="AddStudente">
 					<div class="mt-3">
-						<label class="form-label">Esame:</label>
+						<label class="form-label">Esame</label>
 						<select asp-for="K_Esame" asp-items="@ViewBag.EsamiList" class="form-select" onchange="this.form.submit()">
 							<option disabled selected>-- Seleziona un esame --</option>
 						</select>
@@ -34,7 +30,7 @@
 				@if (ruolo == "D")
 				{
 					<div class="mt-3">
-						<label class="form-label">Destinatari:</label>
+						<label class="form-label">Destinatari</label>
 						<select asp-for="K_Studente" asp-items="@ViewBag.StudentiList" class="form-select">
 							<option selected disabled>-- Seleziona un destinatario --</option>
 							<option value="1">Amministrazione</option>
@@ -45,7 +41,7 @@
 				@if (ruolo == "O")
 				{
 					<div class="mt-3">
-						<label class="form-label">Studenti:</label>
+						<label class="form-label">Studenti</label>
 						<select asp-for="K_Studente" asp-items="@ViewBag.StudentiList" class="form-select">
 							<option selected disabled>-- Seleziona uno studente --</option>
 						</select>
@@ -53,7 +49,7 @@
 					</div>
 
 					<div class="mt-3">
-						<label class="form-label">Docenti:</label>
+						<label class="form-label">Docenti</label>
 						<select asp-for="K_Docente" asp-items="@ViewBag.DocentiList" class="form-select">
 							<option selected>-- Seleziona un docente --</option>
 						</select>
@@ -63,7 +59,7 @@
 				@if (ruolo == "S")
 				{
 					<div class="mt-3">
-						<label class="form-label">Destinatari:</label>
+						<label class="form-label">Destinatari</label>
 						<select asp-for="K_Docente" asp-items="@ViewBag.DocentiList" class="form-select">
 							<option selected>-- Seleziona un destinatario --</option>
 							<option value="Amministrazione">Amministrazione</option>
@@ -77,20 +73,15 @@
 					<span asp-validation-for="Testo" class="text-danger"></span>
 					<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
 				</div>
-
-			}
-		
-
-	<div class="col-3 shadow p-3 bg-body-tertiary rounded">Nella pagina corrente, il docente e l'amministrazione possono inserire una comunicazione.</div>
-
-
 			</form>
 		</div>
-		
+
+		<div class="col-3">
+			<div class="shadow p-3 bg-body-tertiary rounded d-none d-md-block mt-4">
+				Nella pagina corrente, il docente e l'amministrazione possono inserire una comunicazione.
+			</div>
+			<button type="button" class="btn btn-primary d-block d-md-none" id="info">INFO</button>
+		</div>
 	</div>
 
 </div>
-
-
-
-
