--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -92,7 +92,8 @@
             <!-- Main content -->
             <main class="main-content">
                 <div class="d-flex justify-content-end">
-                    <a href="Logout.aspx" class="btn btn-danger me-2"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                    <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>   
+                    <a href="Logout.aspx" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
                 </div>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
