--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -1,119 +1,119 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - AreaStudente</title>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - AreaStudente</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
 
-	<style>
-		.navbar-custom {
-			background-color: #12304F;
-		}
+    <style>
+        .navbar-custom {
+            background-color: #12304F;
+        }
 
-			.navbar-custom .nav-link,
-			.navbar-custom .navbar-brand {
-				color: white !important;
-			}
+            .navbar-custom .nav-link,
+            .navbar-custom .navbar-brand {
+                color: white !important;
+            }
 
-		.dropdown-menu > li:hover > .dropdown-submenu {
-			display: block;
-		}
+        .dropdown-menu > li:hover > .dropdown-submenu {
+            display: block;
+        }
 
-		.sticky-top {
-			z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
-		}
+        .sticky-top {
+            z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
+        }
 
 
-		.navbar-nav .nav-item.logout {
-			position: absolute;
-			right: 0; /* Posiziona il link a destra */
-		}
-	</style>
+        .navbar-nav .nav-item.logout {
+            position: absolute;
+            right: 0; /* Posiziona il link a destra */
+        }
+
+    </style>
 
 </head>
 <body class="m-0 flex-wrapper">
-	<div class="bg-black pb-1">
-		<div class="d-flex flex-column">
-			<div class="d-flex justify-content-end mb-2 mt-1">
-				<!-- Pulsanti in alto a destra -->
-				<div class="d-flex gap-2 me-3">
-					<a class="btn btn-light btn-sm" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
-				</div>
-				<div class="d-flex gap-2 me-3">
-					<a href="#" class="btn btn-light btn-sm">Area Lavoro</a>
-				</div>
-			</div>
-			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
-				<div>
-					<a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" height="50px;"></a>
-				</div>
+    <div class="bg-white p-0 " style="height:6rem;">
+        <div class="d-flex flex-row">
+            <div class="w-50 d-flex align-items-center">
+                <a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" style="height: 6rem; padding-bottom:10px;"></a>
+            </div>
+            <div class="d-flex justify-content-end flex-column w-50 mb-2 mt-1">
+                <div class="d-flex justify-content-end  mb-2 mt-1">
+                    <!-- Pulsanti in alto a destra -->
+                    <div class="d-flex gap-2 me-3">
+                        <a href="#" class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
+                    </div>
+                    <div class="d-flex gap-2 me-3">
+                        <a class="btn  btn-sm "  style="color: #12304F; border-color:#12304F;" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
+                    </div>
+                </div>
+                <p class="fs-4 text-black me-3 text-end">Fatti non foste a viver come bruti</p>
 
-				<div>
-					<p class="fs-4 text-white m-0">Fatti non foste a viver come bruti</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<header>
-		<div class="sticky-top">
-			<nav class="navbar navbar-expand-lg navbar-custom">
-				<div class="mx-3">
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" asp-area="" asp-controller="Studenti" asp-action="Show">Il mio Profilo</a>
-							</li>
+            </div>
+        </div>
+    </div>
+    
+    <header>
+        <div class="sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-custom">
+                <div class="mx-3">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Studenti" asp-action="Show">Il mio Profilo</a>
+                            </li>
 
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Gestione Profilo
-								</a>
-								<ul class="dropdown-menu">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Gestione Profilo
+                                </a>
+                                <ul class="dropdown-menu">
 
-									<li class="dropdown">
-										<a class="dropdown-item" asp-area="" asp-controller="" asp-action="">
-											Modifica Dati
-										</a>
-									</li>
-								</ul>
-							</li>
+                                    <li class="dropdown">
+                                        <a class="dropdown-item" asp-area="" asp-controller="" asp-action="">
+                                            Modifica Dati
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
 
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Immatricolazione
-								</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="">Invia Documenti</a></li>
-								</ul>
-							</li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Immatricolazione
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="">Invia Documenti</a></li>
+                                </ul>
+                            </li>
 
-							<li class="nav-item">
+                            <li class="nav-item">
 
-								<a class="nav-link active" aria-current="page" href="#">Contatta l'Amministrazione</a>
+                                <a class="nav-link active" aria-current="page" href="#">Contatta l'Amministrazione</a>
 
-							</li>
+                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
                             </li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 
-	@* <div class="container"> *@
-		<main role="main" class="pb-3">
-			@RenderBody()
-		</main>
-	@* </div> *@
+    @* <div class="container"> *@
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+    @* </div> *@
 
 
     <footer>
