--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -15,10 +16,10 @@
             background-color: #12304F;
         }
 
-        .navbar-custom .nav-link,
-        .navbar-custom .navbar-brand {
-            color: white !important;
-        }
+            .navbar-custom .nav-link,
+            .navbar-custom .navbar-brand {
+                color: white !important;
+            }
 
         .dropdown-menu > li:hover > .dropdown-submenu {
             display: block;
@@ -33,20 +34,28 @@
             margin-left: 15px; /* Aggiungi margine tra i vari bottoni */
         }
 
-        .navbar-nav .nav-item .btn-light {
-            margin-top: 5px; /* Spazio tra i bottoni */
-        }
+            .navbar-nav .nav-item .btn-light {
+                margin-top: 5px; /* Spazio tra i bottoni */
+            }
 
-        /* Aggiungi un margine tra l'icona e il nome dello studente */
-        .navbar-nav .nav-item .btn-light i {
-            margin-right: 10px; /* Aggiungi uno spazio tra l'icona e il testo */
+                /* Aggiungi un margine tra l'icona e il nome dello studente */
+                .navbar-nav .nav-item .btn-light i {
+                    margin-right: 10px; /* Aggiungi uno spazio tra l'icona e il testo */
+                }
+
+        .flex-wrapper {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+            justify-content: space-between;
+           
         }
     </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="m-0 flex-wrapper">
     <form id="form1" runat="server">
 
         <header>
@@ -70,14 +79,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" href="#">Home</a>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li id="liMateriali" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Lezioni</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Accesso lezioni</a></li>
                                         <li><a class="dropdown-item" href="#">Materiale lezioni</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li id="liAppelli" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Appelli</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Prenotazione Appelli</a></li>
@@ -93,14 +102,15 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Pagamenti</a>
                                 </li>
-                                <li class="nav-item">
+                                <li id="liComunicazioni" runat="server" class="nav-item">
                                     <a class="nav-link" href="#">Comunicazioni</a>
                                 </li>
                             </ul>
 
                             <ul class="navbar-nav navbar-right">
                                 <li class="nav-item">
-                                    <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i><asp:Label ID="lblStudente" runat="server"></asp:Label></a>
+                                    <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i>
+                                        <asp:Label ID="lblStudente" runat="server"></asp:Label></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="btn btn-light btn-sm">Logout</a>
@@ -117,28 +127,28 @@
         </asp:ContentPlaceHolder>
 
         <footer>
-        <div class="bg-dark text-white position-sticky">
-            <div class="container d-flex justify-content-between align-items-end flex-wrap">
-                <div>
-                    <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                    <p class="fs-4">Università UNIGen</p>
-                    <p class="fs-6">Milano, MI 20100, IT</p>
-                </div>
-                <div>
-                    <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
-                </div>
-                <div>
-                    <p class="fs-5 mb-1">Chi Siamo</p>
-                    <ul class="list-unstyled ms-3">
-                        <li><a href="#" class="text-white">Contatti</a></li>
-                        <li><a href="#" class="text-white">Come Funziona</a></li>
-                        <li><a href="#" class="text-white">FAQ</a></li>
-                        <li><a href="#" class="text-white">Privacy</a></li>
-                    </ul>
+            <div class="bg-dark text-white">
+                <div class="container d-flex justify-content-between align-items-end flex-wrap">
+                    <div>
+                        <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
+                        <p class="fs-4">Università UNIGen</p>
+                        <p class="fs-6">Milano, MI 20100, IT</p>
+                    </div>
+                    <div>
+                        <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
+                    </div>
+                    <div>
+                        <p class="fs-5 mb-1">Chi Siamo</p>
+                        <ul class="list-unstyled ms-3">
+                            <li><a href="#" class="text-white">Contatti</a></li>
+                            <li><a href="#" class="text-white">Come Funziona</a></li>
+                            <li><a href="#" class="text-white">FAQ</a></li>
+                            <li><a href="#" class="text-white">Privacy</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
     </form>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
