--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -8,7 +8,7 @@
 
 	<h1>Nuova Comunicazione</h1>
 	<div class="row gx-5">
-		<div class="col-9">
+		<div class="col">
 			@{
 				var ruolo = Context.Session.GetString("Ruolo");
 			}
@@ -79,8 +79,8 @@
 				</div>
 			</form>
 		</div>
-		<div class="col-3">
-			<div class="shadow p-3 bg-body-tertiary rounded d-none d-md-block mt-4 position-fixed me-2">
+		<div class="col">
+			<div class="shadow p-3 bg-body-tertiary rounded d-none d-md-block mt-4  me-2">
 				<p>Nella pagina corrente, l'utente può inserire una comunicazione.</p>
 				&nbsp;
 				<p>Se l'utente è un <b>Docente</b> può scegliere se destinare la comunicazione all'Amministrazione, oppure scegliere se destinarla ad uno degli studenti che frequenta le sue materie, scegliendo prima un esame tra quelli che presiede</p>
