--- a/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
+++ b/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
@@ -41,7 +41,7 @@
 				<div class="row mb-0 mb-lg-3 align-items-end">
 					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 						<label class="form-label form-control-label">E-Mail:</label>
-						<input type="email" asp-for="" class="form-control form-control-alternative" readonly />
+						<input type="email" asp-for="Email" class="form-control form-control-alternative" readonly />
 					</div>
 					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
 						<a type="button" class="btn btn-primary fs-6" data-bs-toggle="modal" data-bs-target="#modifica-password-modal" aria-expanded="false" aria-controls="modifica-password-collapse">Modifica Password</a>
@@ -58,7 +58,7 @@
 							<div class="modal-body">
 								<div class="mb-2 ">
 									<label class="form-label form-control-label">Inserisci la Vecchia Password:</label>
-									<input type="password" asp-for="Password" class="form-control form-control-alternative" />
+									<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
 								</div>
 								<div class="mb-2 ">
 									<label class="form-label form-control-label">Nuova Password:</label>
@@ -139,7 +139,7 @@
 			</div>
 
 		
-				@* <div class="col-12 col-xl-3 mt-5 mt-lg-0 px-0 px-lg-2">
+				<div class="col-12 col-xl-3 mt-5 mt-lg-0 px-0 px-lg-2">
 					<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
 
 						@{
@@ -180,7 +180,7 @@
 						</div>
 
 					</div>
-				</div>			 *@
+				</div>			
 		</form>
 	</div>
 </div>
