--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                                     Account
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Modifica Dati</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Docenti" asp-action="ModificaProfilo">Modifica Dati</a></li>
                                     <li><a class="dropdown-item" href="#">Recupera Password</a></li>
                                 </ul>
                             </li>
