--- a/AreaDocente/Views/Materiali/Lista.cshtml
+++ b/AreaDocente/Views/Materiali/Lista.cshtml
@@ -7,26 +7,36 @@
 
 
 <table class="table">
-    <thead>
-        <tr>
-            @*  <th>Id</th> *@
-            <th>Titolo</th>
-            <th>Materiale</th>
-            <th>Tipo</th>
-            <th>Esame</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var mat in Model)
-        {
-            <tr>
-                @* <td>@stu.Id</td> *@
-                <td>@mat.Titolo</td>
-                <td>@mat.Materiale</td>
-                <td>@mat.Tipo</td>
-                <td>@mat.esame.TitoloEsame</td>
-            </tr>
+	<thead>
+		<tr>
+			@*  <th>Id</th> *@
+			<th>Titolo</th>
+			<th>Materiale</th>
+			<th>Tipo</th>
+			<th>Esame</th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var mat in Model)
+		{
+			<tr>
+				@* <td>@stu.Id</td> *@
+				<td>@mat.Titolo</td>
+				<td>@mat.Materiale</td>
+				<td>@mat.Tipo</td>
+				<td>@mat.esame.TitoloEsame</td>
+				<td><a class="btn btn-primary" asp-controller="Materiali" asp-action="Add" asp-route-id="@mat.K_Materiale">Modifica</a></td>
+			</tr>
 
-        }
-    </tbody>
+		}
+	</tbody>
+	<tfoot>
+		<tr>
+			<td>
+				<a class="btn btn-primary" asp-controller="Materiali" asp-action="Add">Inserire del nuovo materiale</a>
+			</td>
+		</tr>
+	</tfoot>
+
+
 </table>
