Completata pagina Esami/Docenti
leggi su

--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
 				<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 					<img src="~/Sources/esamiedocentiUNIGEN.png" class="card-img-top" alt="...">
 					<div class="card-body">
-						<p class="fw-bold">Esami e Docenti</p>
+						<p class="fw-bold"><a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="ElencoDocentiConEsami">Esami e Docenti</a></p>
 						<p class="card-text">Consulta informazioni su esami, modalità di svolgimento, programmi e contatti dei docenti per ogni insegnamento.</p>
 					</div>
 				</div>
