--- a/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
+++ b/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
@@ -172,7 +172,7 @@
                 </div>
                 <h4 class="text-center mt-5">
                     <!-- Mostra il nome solo se il modello non è null/vuoto -->
-                    @(Model?.Nome ?? "Studente") @(Model?.Cognome ?? "Cognome")
+                    @(Model?.Nome ?? "Docente") @(Model?.Cognome ?? "Cognome")
                 </h4>
                 <p class="text-center">Università UniGen</p>
                 <hr class="my-4">
