--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -97,8 +97,8 @@
         </div>
     </header>
 
-    <div class="container">
-        <main role="main" class="pb-3 mt-5">
+    <div @* class="container" *@>
+        <main role="main" @* class="pb-3 mt-5" *@>
             @RenderBody()
         </main>
     </div>
