--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
 							</li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
+								<a class="nav-link active" aria-current="page" href="/Faq/Faq/@ViewData["studente_id"]">FAQ</a>
                             </li>
 						</ul>
 					</div>
