--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
 										</a>
 										<ul class="dropdown-menu dropdown-submenu">
 											<li><a class="dropdown-item" asp-controller="OffertaFormativa">Programma</a></li>
-											<li><a class="dropdown-item" asp-controller="OffertaFormativa">Esami e docenti</a></li>
+											<li><a class="dropdown-item" asp-controller="OffertaFormativa" asp-action="ElencoDocenti">Esami e docenti</a></li>
 										</ul>
 									</li>
 								</ul>
