--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         }
                     </div>
                     <div class="d-flex gap-2 me-3">
-                        <a class="btn  btn-sm "  style="color: #12304F; border-color:#12304F;" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
+                        <a class="btn  btn-sm " style="color: #12304F; border-color:#12304F;" aria-current="page" href="https://localhost:7272/Home/Index">Logout</a>
                     </div>
                 </div>
                 <p class="fs-4 text-black me-3 text-end">Fatti non foste a viver come bruti</p>
