--- a/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
+++ b/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
@@ -180,7 +180,7 @@
 					<p class="text-center">Università UniGen</p>
 					<hr class="my-4">
 					<h5 class="text-center">Modifica Immagine Profilo</h5>
-					<p class="text-center">Qualora volessi aggiornare il tuo profilo, carica una nuova immagine scegliendo un file dal tuo dispositivo.</p>
+					<p class="text-center">Qualora volessi aggiornare il tuo profilo, carica una nuova immagine scegliendo un file dal tuo dispositivo.</p> <p class="text-center"><strong>Formati supportati:</strong> JPEG, JPG, PNG. </p>
 
 					<div class="input-group mt-5">
 						<input type="file" class="form-control" asp-for="ImmagineProfiloFile" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" />
