Modifica non funzionante

--- a/AreaDocente/Views/Materiali/Lista.cshtml
+++ b/AreaDocente/Views/Materiali/Lista.cshtml
@@ -25,7 +25,7 @@
 				<td>@mat.Materiale</td>
 				<td>@mat.Tipo</td>
 				<td>@mat.esame.TitoloEsame</td>
-				<td><a class="btn btn-primary" asp-controller="Materiali" asp-action="Add" asp-route-id="@mat.K_Materiale">Modifica</a></td>
+				<td><a class="btn btn-primary" asp-controller="Materiali" asp-action="Edit" asp-route-id="@mat.K_Materiale">Modifica</a></td>
 			</tr>
 
 		}
