--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
                                     Attività
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Materiali" asp-action="Lista">Materiali</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Lezioni" asp-action="Add">Lezioni</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Materiali" asp-action="List">Materiali</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Lezioni" asp-action="List">Lezioni</a></li>
                                 </ul>
                             </li>
 
