--- a/AreaDocente/Views/Materiali/List.cshtml
+++ b/AreaDocente/Views/Materiali/List.cshtml
@@ -21,7 +21,7 @@
                     <td>@mat.Titolo</td>
                     <td>@mat.Materiale</td>
                     <td>@mat.Tipo</td>
-                    <td>@mat.esame.TitoloEsame</td>
+                    <td>@Html.DisplayFor(Model => mat.esame.TitoloEsame)</td>
                     <td><a class="btn btn-primary" asp-controller="Materiali" asp-action="Edit" asp-route-id="@mat.K_Materiale">Modifica</a></td>
                 </tr>
 
