--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<div class="d-flex  flex-column text-start" style="height:75vh; margin-top:23px; margin-bottom:150px;">
+<div style="height:13vh;"></div>
+<div class="row">
+<div class="col-1"></div>
+<div class="col-11">
     <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
 
 
@@ -54,4 +57,5 @@
     <p></p>
     <p></p>
 
+</div>
 </div>
