--- a/AreaDocente/Views/Materiali/Edit.cshtml
+++ b/AreaDocente/Views/Materiali/Edit.cshtml
@@ -41,7 +41,7 @@
 
                 <div class="mt-4 d-flex justify-content-between">
                     <button type="submit" class="btn btn-primary btn-lg">Modifica</button>
-                    <button type="submit" class="btn btn-danger ms-3" asp-controller="Lezioni" asp-action="Delete">Elimina</button>
+                    <button type="submit" class="btn btn-danger ms-3" asp-controller="Materiali" asp-action="Delete">Elimina</button>
                 </div>
 
             </form>
